--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hot Beans Web - Homepage</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -57,7 +58,7 @@
   <!-- Team Dropdown Section -->
   <section class="container mx-auto px-4 sm:px-6 lg:px-8 my-10">
     <div class="relative">
-      <button id="teamButton" class="px-6 py-3 bg-green-500 text-white font-bold rounded shadow-lg hover:bg-green-600 transition">
+      <button id="teamButton" class="px-8 py-4 bg-blue-600 text-white font-bold rounded-full shadow-lg hover:bg-blue-700 transition">
         Meet Our Team
       </button>
       <div id="teamDropdown" class="hidden mt-4 bg-white rounded-lg shadow p-4">
