--- a/apply.html
+++ b/apply.html
@@ -4,48 +4,50 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hot Beans Web - Application Form</title>
-  <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Google Fonts (Inter) -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
     body { font-family: 'Inter', sans-serif; }
   </style>
 </head>
-<body class="bg-gradient-to-b from-blue-100 to-white min-h-screen flex flex-col">
-  <!-- Navigation (same as other pages) -->
-  <nav class="bg-gradient-to-r from-blue-600 to-blue-500 text-white px-6 py-4 flex items-center justify-between shadow-md">
+<body class="min-h-screen flex flex-col bg-gradient-to-b from-blue-100 to-white pt-20">
+  <!-- Navigation -->
+  <nav class="bg-gradient-to-r from-blue-600 to-blue-500 text-white px-6 py-4 flex items-center justify-between shadow-lg fixed top-0 w-full z-50">
     <div class="logo flex items-center">
-      <img src="WhatsApp_Image_2025-03-13_at_19.45.26_04d9f96a-removebg-preview.png" alt="Hot Beans Web Logo" class="h-10 mr-2" />
+      <img src="WhatsApp_Image_2025-03-13_at_19.45.26_04d9f96a-removebg-preview.png" alt="Hot Beans Web Logo" class="h-10 mr-2">
     </div>
     <div class="md:hidden">
-      <button id="nav-toggle" class="focus:outline-none">
-        <svg id="hamburger-icon" class="h-8 w-8 transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 8h16M4 16h16"/>
+      <button id="nav-toggle-apply" class="focus:outline-none">
+        <svg id="hamburger-icon-apply" class="h-8 w-8 transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 8h16M4 16h16"></path>
         </svg>
       </button>
     </div>
-    <ul id="nav-menu" class="hidden md:flex space-x-6 text-lg">
+    <ul id="nav-menu-apply" class="hidden md:flex space-x-8 text-lg">
       <li><a href="index.html" class="hover:underline">Home</a></li>
       <li><a href="job-specifications.html" class="hover:underline">Job Specs</a></li>
-      <li><a href="apply.html" class="underline font-semibold">Apply</a></li>
+      <li><a href="apply.html" class="hover:underline">Apply</a></li>
       <li><a href="resources.html" class="hover:underline">Resources</a></li>
-      <li><a href="contact.html" class="hover:underline">Contact</a></li>
+      <li><a href="about.html" class="hover:underline">About</a></li>
+      <li><a href="meet-the-team.html" class="hover:underline">Meet Team</a></li>
     </ul>
   </nav>
-  <div id="mobile-menu" class="md:hidden hidden bg-blue-600 text-white transition-all duration-300">
+  
+  <!-- Mobile Navigation -->
+  <div id="mobile-menu-apply" class="md:hidden hidden bg-blue-600 text-white transition-all duration-300 mt-16">
     <ul class="p-4 space-y-2">
       <li><a href="index.html" class="block hover:underline">Home</a></li>
       <li><a href="job-specifications.html" class="block hover:underline">Job Specs</a></li>
       <li><a href="apply.html" class="block hover:underline">Apply</a></li>
       <li><a href="resources.html" class="block hover:underline">Resources</a></li>
-      <li><a href="contact.html" class="block hover:underline">Contact</a></li>
+      <li><a href="about.html" class="block hover:underline">About</a></li>
+      <li><a href="meet-the-team.html" class="block hover:underline">Meet Team</a></li>
     </ul>
   </div>
-
+  
   <!-- Application Form -->
-  <main class="flex-grow container mx-auto px-4 sm:px-6 lg:px-8 my-10">
-    <section class="bg-white rounded-xl shadow-lg p-8">
+  <main class="container mx-auto px-6 py-12">
+    <section class="bg-white rounded-xl shadow-lg p-10">
       <h2 class="text-3xl font-bold text-blue-600 mb-6">Apply for a Position</h2>
       <form id="applicationForm" onsubmit="handleFormSubmit(event)" class="space-y-6">
         <div>
@@ -77,16 +79,28 @@
           <label for="coverLetter" class="block text-lg font-semibold mb-2">Cover Letter / Additional Info</label>
           <textarea id="coverLetter" name="coverLetter" rows="5" placeholder="Tell us why you're a good fit" class="w-full p-3 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-400"></textarea>
         </div>
-        <button type="submit" class="w-full py-3 bg-blue-600 text-white rounded-full shadow-lg hover:bg-blue-700 transition">Submit Application</button>
+        <button type="submit" class="w-full py-3 bg-blue-600 text-white rounded-full shadow-lg hover:bg-blue-700 transition">
+          Submit Application
+        </button>
       </form>
     </section>
   </main>
-
+  
   <!-- Footer -->
   <footer class="bg-blue-600 text-white text-center py-6">
     <p>&copy; 2025 Hot Beans Web. All rights reserved.</p>
   </footer>
-
-  <script src="script.js"></script>
+  
+  <script>
+    document.getElementById('nav-toggle-apply').addEventListener('click', function() {
+      var mobileMenu = document.getElementById('mobile-menu-apply');
+      mobileMenu.classList.toggle('hidden');
+    });
+    function handleFormSubmit(event) {
+      event.preventDefault();
+      // Add your form submission logic here
+      alert('Application submitted!');
+    }
+  </script>
 </body>
 </html>
