--- a/job-specifications.html
+++ b/job-specifications.html
@@ -8,45 +8,51 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <style> body { font-family: 'Inter', sans-serif; } </style>
 </head>
-<body class="bg-gradient-to-b from-blue-100 to-white min-h-screen flex flex-col">
-  <!-- Navigation (same as index.html) -->
-  <nav class="bg-gradient-to-r from-blue-600 to-blue-500 text-white px-6 py-4 flex items-center justify-between shadow-md">
+<body class="min-h-screen flex flex-col bg-gradient-to-b from-blue-100 to-white pt-20">
+  <!-- Navigation -->
+  <nav class="bg-gradient-to-r from-blue-600 to-blue-500 text-white px-6 py-4 flex items-center justify-between shadow-lg fixed top-0 w-full z-50">
     <div class="logo flex items-center">
-      <img src="WhatsApp_Image_2025-03-13_at_19.45.26_04d9f96a-removebg-preview.png" alt="Hot Beans Web Logo" class="h-10 mr-2" />
+      <img src="WhatsApp_Image_2025-03-13_at_19.45.26_04d9f96a-removebg-preview.png" alt="Hot Beans Web Logo" class="h-10 mr-2">
     </div>
     <div class="md:hidden">
-      <button id="nav-toggle" class="focus:outline-none">
-        <svg id="hamburger-icon" class="h-8 w-8 transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 8h16M4 16h16"/>
+      <button id="nav-toggle-job" class="focus:outline-none">
+        <svg id="hamburger-icon-job" class="h-8 w-8 transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 8h16M4 16h16"></path>
         </svg>
       </button>
     </div>
-    <ul id="nav-menu" class="hidden md:flex space-x-6 text-lg">
+    <ul id="nav-menu-job" class="hidden md:flex space-x-8 text-lg">
       <li><a href="index.html" class="hover:underline">Home</a></li>
-      <li><a href="job-specifications.html" class="underline font-semibold">Job Specs</a></li>
+      <li><a href="job-specifications.html" class="hover:underline">Job Specs</a></li>
       <li><a href="apply.html" class="hover:underline">Apply</a></li>
       <li><a href="resources.html" class="hover:underline">Resources</a></li>
-      <li><a href="contact.html" class="hover:underline">Contact</a></li>
+      <li><a href="about.html" class="hover:underline">About</a></li>
+      <li><a href="meet-the-team.html" class="hover:underline">Meet Team</a></li>
+
     </ul>
   </nav>
-  <div id="mobile-menu" class="md:hidden hidden bg-blue-600 text-white transition-all duration-300">
+  
+  <!-- Mobile Navigation -->
+  <div id="mobile-menu-job" class="md:hidden hidden bg-blue-600 text-white transition-all duration-300 mt-16">
     <ul class="p-4 space-y-2">
       <li><a href="index.html" class="block hover:underline">Home</a></li>
       <li><a href="job-specifications.html" class="block hover:underline">Job Specs</a></li>
       <li><a href="apply.html" class="block hover:underline">Apply</a></li>
       <li><a href="resources.html" class="block hover:underline">Resources</a></li>
-      <li><a href="contact.html" class="block hover:underline">Contact</a></li>
+      <li><a href="about.html" class="block hover:underline">About</a></li>
+      <li><a href="meet-the-team.html" class="block hover:underline">Meet Team</a></li>
+
     </ul>
   </div>
-
+  
   <!-- Main Content -->
-  <main class="flex-grow container mx-auto px-4 sm:px-6 lg:px-8 my-10">
-    <section class="bg-white rounded-xl shadow-lg p-8">
+  <main class="container mx-auto px-6 py-12">
+    <section class="bg-white rounded-xl shadow-lg p-10">
       <h2 class="text-3xl font-bold text-blue-600 mb-6">Current Openings</h2>
-
+      
       <!-- Junior Web Developer -->
       <article class="mb-8">
-        <h3 class="text-2xl font-semibold text-blue-500 mb-2">Junior Web Developer</h3>
+        <h3 class="text-2xl font-semibold text-blue-600 mb-2">Junior Web Developer</h3>
         <p class="text-gray-700"><strong>Location:</strong> Hybrid / Remote</p>
         <p class="text-gray-700 font-semibold mt-2">Responsibilities:</p>
         <ul class="list-disc list-inside text-gray-700 ml-4 space-y-1">
@@ -61,10 +67,10 @@
           <li>Good communication and teamwork skills</li>
         </ul>
       </article>
-
+      
       <!-- Mid-level Web Developer -->
       <article class="mb-8">
-        <h3 class="text-2xl font-semibold text-blue-500 mb-2">Mid-level Web Developer</h3>
+        <h3 class="text-2xl font-semibold text-blue-600 mb-2">Mid-level Web Developer</h3>
         <p class="text-gray-700"><strong>Location:</strong> Hybrid / Remote</p>
         <p class="text-gray-700 font-semibold mt-2">Responsibilities:</p>
         <ul class="list-disc list-inside text-gray-700 ml-4 space-y-1">
@@ -74,36 +80,4 @@
         </ul>
         <p class="text-gray-700 font-semibold mt-2">Qualifications:</p>
         <ul class="list-disc list-inside text-gray-700 ml-4 space-y-1">
-          <li>2-3 years of web development experience</li>
-          <li>Proficient in JavaScript frameworks (React, Vue, or Angular)</li>
-          <li>Experience with version control (Git)</li>
-        </ul>
-      </article>
-
-      <!-- Senior Web Developer -->
-      <article>
-        <h3 class="text-2xl font-semibold text-blue-500 mb-2">Senior Web Developer</h3>
-        <p class="text-gray-700"><strong>Location:</strong> Hybrid / Remote</p>
-        <p class="text-gray-700 font-semibold mt-2">Responsibilities:</p>
-        <ul class="list-disc list-inside text-gray-700 ml-4 space-y-1">
-          <li>Lead complex projects from concept to completion</li>
-          <li>Architect scalable and maintainable systems</li>
-          <li>Guide and mentor junior and mid-level developers</li>
-        </ul>
-        <p class="text-gray-700 font-semibold mt-2">Qualifications:</p>
-        <ul class="list-disc list-inside text-gray-700 ml-4 space-y-1">
-          <li>5+ years of web development experience</li>
-          <li>Expert in one or more modern JavaScript frameworks</li>
-          <li>Strong problem-solving and leadership skills</li>
-        </ul>
-      </article>
-    </section>
-  </main>
-
-  <!-- Footer -->
-  <footer class="bg-blue-600 text-white text-center py-6">
-    <p>&copy; 2025 Hot Beans Web. All rights reserved.</p>
-  </footer>
-  <script src="script.js"></script>
-</body>
-</html>
+          <li>2-3 years 
