--- a/resources.html
+++ b/resources.html
@@ -6,43 +6,50 @@
   <title>Hot Beans Web - Web Development Resources</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-  <style> body { font-family: 'Inter', sans-serif; } </style>
+  <style>
+    body { font-family: 'Inter', sans-serif; }
+  </style>
 </head>
-<body class="bg-gradient-to-b from-blue-100 to-white min-h-screen flex flex-col">
-  <nav class="bg-gradient-to-r from-blue-600 to-blue-500 text-white px-6 py-4 flex items-center justify-between shadow-md">
+<body class="min-h-screen flex flex-col bg-gradient-to-b from-blue-100 to-white pt-20">
+  <!-- Navigation -->
+  <nav class="bg-gradient-to-r from-blue-600 to-blue-500 text-white px-6 py-4 flex items-center justify-between shadow-lg fixed top-0 w-full z-50">
     <div class="logo flex items-center">
       <img src="WhatsApp_Image_2025-03-13_at_19.45.26_04d9f96a-removebg-preview.png" alt="Hot Beans Web Logo" class="h-10 mr-2">
     </div>
     <div class="md:hidden">
-      <button id="nav-toggle" class="focus:outline-none">
-        <svg id="hamburger-icon" class="h-8 w-8 transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 8h16M4 16h16"/>
+      <button id="nav-toggle-resources" class="focus:outline-none">
+        <svg id="hamburger-icon-resources" class="h-8 w-8 transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 8h16M4 16h16"></path>
         </svg>
       </button>
     </div>
-    <ul id="nav-menu" class="hidden md:flex space-x-6 text-lg">
+    <ul id="nav-menu-resources" class="hidden md:flex space-x-8 text-lg">
       <li><a href="index.html" class="hover:underline">Home</a></li>
       <li><a href="job-specifications.html" class="hover:underline">Job Specs</a></li>
       <li><a href="apply.html" class="hover:underline">Apply</a></li>
-      <li><a href="resources.html" class="underline font-semibold">Resources</a></li>
-      <li><a href="contact.html" class="hover:underline">Contact</a></li>
+      <li><a href="resources.html" class="hover:underline">Resources</a></li>
+      <li><a href="about.html" class="hover:underline">About</a></li>
+      <li><a href="meet-the-team.html" class="hover:underline">Meet Team</a></li>
     </ul>
   </nav>
-  <div id="mobile-menu" class="md:hidden hidden bg-blue-600 text-white transition-all duration-300">
+  
+  <!-- Mobile Navigation -->
+  <div id="mobile-menu-resources" class="md:hidden hidden bg-blue-600 text-white transition-all duration-300 mt-16">
     <ul class="p-4 space-y-2">
       <li><a href="index.html" class="block hover:underline">Home</a></li>
       <li><a href="job-specifications.html" class="block hover:underline">Job Specs</a></li>
       <li><a href="apply.html" class="block hover:underline">Apply</a></li>
       <li><a href="resources.html" class="block hover:underline">Resources</a></li>
-      <li><a href="contact.html" class="block hover:underline">Contact</a></li>
+      <li><a href="about.html" class="block hover:underline">About</a></li>
+      <li><a href="meet-the-team.html" class="block hover:underline">Meet Team</a></li>
     </ul>
   </div>
-
+  
   <!-- Main Content -->
-  <main class="flex-grow container mx-auto px-4 sm:px-6 lg:px-8 my-10">
-    <section class="bg-white rounded-xl shadow-lg p-8">
+  <main class="container mx-auto px-6 py-12">
+    <section class="bg-white rounded-xl shadow-lg p-10">
       <h2 class="text-3xl font-bold text-blue-600 mb-6">Web Development Learning Resources</h2>
-      <p class="text-gray-700 mb-6">Below are some recommended YouTube videos to help you learn web development:</p>
+      <p class="text-lg text-gray-700 mb-6">Below are some recommended YouTube videos to help you learn web development:</p>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
         <!-- Video 1 -->
         <div class="bg-gray-100 rounded-lg p-4 shadow">
@@ -79,12 +86,17 @@
       </div>
     </section>
   </main>
-
+  
   <!-- Footer -->
   <footer class="bg-blue-600 text-white text-center py-6">
     <p>&copy; 2025 Hot Beans Web. All rights reserved.</p>
   </footer>
-
-  <script src="script.js"></script>
+  
+  <script>
+    document.getElementById('nav-toggle-resources').addEventListener('click', function() {
+      var mobileMenu = document.getElementById('mobile-menu-resources');
+      mobileMenu.classList.toggle('hidden');
+    });
+  </script>
 </body>
 </html>
